syntax = "proto3";

package voldemort;

option java_package = "voldemort.client.protocol.pb";
option java_outer_classname = "VProto";
option optimize_for = SPEED;

message ClockEntry {
    int32 node_id = 1;
    int64 version = 2;
}

message VectorClock {
    repeated ClockEntry entries = 1;
    int64 timestamp = 2;
}

message Versioned {
    bytes value = 1;
    VectorClock version = 2;
}

message Error {
    int32 error_code = 1;
    string error_message = 2;
}

message KeyedVersions {
    bytes key = 1;
    repeated Versioned versions = 2;
}

message GetRequest {
    bytes key = 1;
    bytes transform = 2;
}

message GetResponse {
    repeated Versioned versioned = 1;
    Error error = 2;
}

message GetVersionResponse {
    repeated VectorClock versions = 1;
    Error error = 2;
}

message GetAllRequest {
    repeated bytes key = 1;

    message GetAllTransform {
        bytes key = 1;
        bytes transform = 2;
    }
    repeated GetAllTransform transforms = 2;
}

message GetAllResponse {
    repeated KeyedVersions values = 1;
    Error error = 2;
}

message PutRequest {
    bytes key = 1;
    Versioned versioned = 2;
    bytes transforms = 3;
}

message PutResponse {
    Error error = 1;
}

message DeleteRequest {
    bytes key = 1;
    VectorClock version = 2;
}

message DeleteResponse {
    bool success = 1;
    Error error = 2;
}

enum RequestType {
    GET = 0;
    GET_ALL = 1;
    PUT = 2;
    DELETE = 3;
    GET_VERSION = 4;
}

message VoldemortRequest {
    RequestType type = 1;
    bool should_route = 2;
    string store = 3;
    GetRequest get = 4;
    GetAllRequest getAll = 5;
    PutRequest put = 6;
    DeleteRequest delete = 7;
    int32 requestRouteType = 8;
}
